summery scrollbar under 370px solved

--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,18 @@ input:focus-within {
     border-color: #29ABE2;
     outline: none;
 }
+
 input::placeholder {
     color: #D1D1D1;
 }
 
 select {
-    border: 1px solid #A8A8A8;;
+    border: 1px solid #A8A8A8;
+    ;
     background-color: white;
     border-radius: 10px;
 }
+
 select:focus-within {
     border-color: #29ABE2;
     outline: none;
@@ -34,6 +37,7 @@ textarea {
     background-color: white;
     border-radius: 10px;
 }
+
 textarea:focus-within {
     border-color: #29ABE2;
     outline: none;
@@ -71,31 +75,75 @@ textarea:focus-within {
     align-items: center;
 }
 
-button:hover{
+button:hover {
     background: #29ABE2;
 }
 
-.customButton:hover{
+.customButton:hover {
     filter: invert(53%) sepia(99%) saturate(681%) hue-rotate(165deg) brightness(93%) contrast(89%);
 }
 
 
 
-.memberBgColorFF7A00{background-color: #FF7A00;}
-.memberBgColorFF5EB3{background-color: #FF5EB3;}
-.memberBgColor6E52FF{background-color: #6E52FF;}
-.memberBgColor9327FF{background-color: #9327FF;}
-.memberBgColor00BEE8{background-color: #00BEE8;}
-.memberBgColor1FD7C1{background-color: #1FD7C1;}
-.memberBgColorFF745E{background-color: #FF745E;}
-.memberBgColorFFA35E{background-color: #FFA35E;}
-.memberBgColorFC71FF{background-color: #FC71FF;}
-.memberBgColorFFC701{background-color: #FFC701;}
-.memberBgColor0038FF{background-color: #0038FF;}
-.memberBgColorC3FF2B{background-color: #C3FF2B;}
-.memberBgColorFFE62B{background-color: #FFE62B;}
-.memberBgColorFF4646{background-color: #FF4646;}
-.memberBgColorFFBB2B{background-color: #FFBB2B;}
+.memberBgColorFF7A00 {
+    background-color: #FF7A00;
+}
+
+.memberBgColorFF5EB3 {
+    background-color: #FF5EB3;
+}
+
+.memberBgColor6E52FF {
+    background-color: #6E52FF;
+}
+
+.memberBgColor9327FF {
+    background-color: #9327FF;
+}
+
+.memberBgColor00BEE8 {
+    background-color: #00BEE8;
+}
+
+.memberBgColor1FD7C1 {
+    background-color: #1FD7C1;
+}
+
+.memberBgColorFF745E {
+    background-color: #FF745E;
+}
+
+.memberBgColorFFA35E {
+    background-color: #FFA35E;
+}
+
+.memberBgColorFC71FF {
+    background-color: #FC71FF;
+}
+
+.memberBgColorFFC701 {
+    background-color: #FFC701;
+}
+
+.memberBgColor0038FF {
+    background-color: #0038FF;
+}
+
+.memberBgColorC3FF2B {
+    background-color: #C3FF2B;
+}
+
+.memberBgColorFFE62B {
+    background-color: #FFE62B;
+}
+
+.memberBgColorFF4646 {
+    background-color: #FF4646;
+}
+
+.memberBgColorFFBB2B {
+    background-color: #FFBB2B;
+}
 
 .memberDiskOv {
     display: flex;
@@ -112,6 +160,7 @@ button:hover{
 }
 
 /* scrollbar settings */
+@media (min-width: 370px) {
 *::-webkit-scrollbar {
     width: 10px;
 }
@@ -127,6 +176,8 @@ button:hover{
     border-radius: 10px;
     border: 2px solid #bbc3ba;
 }
+
 *::-webkit-scrollbar-thumb:hover {
     background-color: #4589FF;
+}
 }
